[package]
name = "simple-message-broker-server"
version = "1.0.0"
edition = "2021"
authors = ["namngh1202@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
fastuuid = "0.3.0"
